--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
-gtk+2.0 (2.8.20-5) UNRELEASED; urgency=low
+gtk+2.0 (2.8.20-5) unstable; urgency=high
 
   * Add a get-orig-source target to retrieve the upstream tarball.
+  * SECURITY: New patch, 030_CVE-2007-0010_error-handling-in-pixbuf-loaders,
+    to fix error handling in pixbuf loaders; CVE-2007-0010;
+    RedHat #218755, #218932.
 
- -- Loic Minier <lool@dooz.org>  Sat, 13 Jan 2007 23:32:16 +0100
+ -- Loic Minier <lool@dooz.org>  Thu, 25 Jan 2007 12:20:04 +0100
 
 gtk+2.0 (2.8.20-4) unstable; urgency=medium
 
